// Vitest Snapshot v1

exports[`codegen > comprehension 1`] = `
"const { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } = vue;

return function render(_ctx,  _cache, $props, $setup, $data, $options) {
	return (_createElementBlock(\\"div\\", null, \\"hi,\\" + _toDisplayString(_ctx.message)))
}"
`;

exports[`codegen > element 1`] = `
"const { openBlock as _openBlock, createElementBlock as _createElementBlock } = vue;

return function render(_ctx,  _cache, $props, $setup, $data, $options) {
	return (_createElementBlock(\\"div\\"))
}"
`;

exports[`codegen > interpolation 1`] = `
"const { toDisplayString as _toDisplayString } = vue;

return function render(_ctx,  _cache, $props, $setup, $data, $options) {
	return (_toDisplayString(_ctx.message))
}"
`;

exports[`codegen > nested element 1`] = `
"const { openBlock as _openBlock, createElementBlock as _createElementBlock } = vue;

return function render(_ctx,  _cache, $props, $setup, $data, $options) {
	return (_createElementBlock(\\"div\\", null, [_createElementBlock(\\"h1\\", null, \\"hello\\"), _createElementBlock(\\"p\\", null, \\"vue\\")]))
}"
`;

exports[`codegen > string 1`] = `
"

return function render(_ctx,  _cache, $props, $setup, $data, $options) {
	return (\\"hi\\")
}"
`;
